--- a/netlify.toml
+++ b/netlify.toml
@@ -13,8 +13,8 @@
     Cross-Origin-Embedder-Policy = "require-corp"
     Permissions-Policy = "cross-origin-isolated=(*)"
 
-# [[headers]]
-#   for = "/worker.mjs"
-#   [headers.values]
-#     Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-eval'"
-
+[[headers]]
+  for = "/worker.mjs"
+  [headers.values]
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-eval'"
+    Cross-Origin-Embedder-Policy = "require-corp"
