Include files like tests/format/flow-repo/esproposal_decorators.ignore/format.test.js as prettier targets
Issue: #17522

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,6 +1,7 @@
 **/.yarn/*
 
 /tests/format/**/*.*
+!/tests/format/**/*.*/
 !/tests/format/**/format.test.js
 /tests/integration/cli/
 /tests/integration/plugins/**/*.*
