--- a/.prettierignore
+++ b/.prettierignore
@@ -3,7 +3,7 @@
 # Ignore directories and files in 'tests/format'
 /tests/format/**/*.*
 # Unignore directories and 'format.test.js' file
-!/tests/format/**/**/
+!/tests/format/**/
 !/tests/format/**/format.test.js
 /tests/integration/cli/
 /tests/integration/plugins/**/*.*
