--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "get-east-asian-width": "1.3.0",
     "get-stdin": "9.0.0",
     "graphql": "16.11.0",
+    "handlebars": "^4.7.8",
     "hermes-parser": "0.29.1",
     "html-element-attributes": "3.4.0",
     "html-ua-styles": "0.0.8",
