--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -75,6 +75,8 @@
       groupName: "GitHub Actions",
       matchManagers: ["github-actions"],
     },
+    // Forbid codemirror@6.65.7
+    // https://github.com/prettier/prettier/pull/13171#issuecomment-1258427561
     {
       matchPackageNames: ["codemirror"],
       allowedVersions: "!/^6\\.65\\.7$/",
@@ -88,5 +90,10 @@
       matchPackageNames: ["@docusaurus/*"],
     },
   ],
-  ignoreDeps: ["collapse-white-space", "prettier"],
+  ignoreDeps: [
+    // It's a dependency of `remark-parse`, use same version to reduce size
+    "collapse-white-space",
+    // It will be updated by release script
+    "prettier",
+  ],
 }
