Try `package-manager-cache: false`

--- a/.github/workflows/prod-test.yml
+++ b/.github/workflows/prod-test.yml
@@ -140,6 +140,7 @@ jobs:
         uses: actions/setup-node@v5
         with:
           node-version: "0.10.48"
+          package-manager-cache: false
 
       - name: Download Artifact
         uses: actions/download-artifact@v5
