--- a/.github/workflows/clean-cspell.yml
+++ b/.github/workflows/clean-cspell.yml
@@ -30,9 +30,12 @@ jobs:
       - name: Run script
         run: node scripts/clean-cspell.js
 
+      - name: Set current date env
+        run: echo "DATE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+
       - uses: peter-evans/create-pull-request@v7
         with:
-          commit-message: Cleanup cspell.json
-          branch: automated-update
+          commit-message: Cleanup cspell.json (${{ env.DATE }})
+          branch: automated-cleanup-cspell-${{ env.DATE }}
           branch-suffix: timestamp
-          title: Cleanup cspell.json
+          title: Cleanup cspell.json (${{ env.DATE }})
