--- a/.github/workflows/clean-cspell.yml
+++ b/.github/workflows/clean-cspell.yml
@@ -31,11 +31,11 @@ jobs:
         run: node scripts/clean-cspell.js
 
       - name: Set current date env
-        run: echo "DATE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+        run: echo "CURRENT_DATE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
 
       - uses: peter-evans/create-pull-request@v7
         with:
-          commit-message: Cleanup cspell.json (${{ env.DATE }})
-          branch: automated-cleanup-cspell-${{ env.DATE }}
+          commit-message: Cleanup cspell.json (${{ env.CURRENT_DATE }})
+          branch: automated-cleanup-cspell-${{ env.CURRENT_DATE }}
           branch-suffix: timestamp
-          title: Cleanup cspell.json (${{ env.DATE }})
+          title: Cleanup cspell.json (${{ env.CURRENT_DATE }})
