--- a/.github/workflows/cleanup-cspell.yml
+++ b/.github/workflows/cleanup-cspell.yml
@@ -3,8 +3,8 @@ name: Cleanup cspell.json
 on:
   workflow_dispatch:
   schedule:
-    # “At every minute on Monday in January.” https://crontab.guru/#*_*_*_1_1
-    - cron: "* * * 1 1"
+    # “At 00:00 on day-of-month 1 in July.” https://crontab.guru/#0_0_1_7_*
+    - cron: "0 0 1 7 *"
 
 permissions:
   pull-requests: write
@@ -30,9 +30,12 @@ jobs:
       - name: Run script
         run: node scripts/clean-cspell.js
 
+      - name: Set current date env
+        run: echo "CURRENT_DATE=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+
       - uses: peter-evans/create-pull-request@v7
         with:
-          commit-message: Cleanup cspell.json
-          branch: automated-update
+          commit-message: Cleanup cspell.json (${{ env.CURRENT_DATE }})
+          branch: automated-cleanup-cspell-${{ env.CURRENT_DATE }}
           branch-suffix: timestamp
-          title: Cleanup cspell.json
+          title: Cleanup cspell.json (${{ env.CURRENT_DATE }})
