Use `pacman` install

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -60,8 +60,8 @@ jobs:
 
       - name: Lint workflow files
         run: |
-          bash <(curl https://raw.githubusercontent.com/rhysd/actionlint/main/scripts/download-actionlint.bash)
-          ./actionlint -color
+          pacman -S actionlint
+          actionlint -color
         shell: bash
 
       - name: Dependency Review
