--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "graphql": "16.11.0",
     "hermes-parser": "0.32.0",
     "html-element-attributes": "3.5.0",
+    "html-event-attributes": "2.2.0",
     "html-ua-styles": "0.1.0",
     "ignore": "7.0.5",
     "import-meta-resolve": "4.2.0",
