--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/types": "7.28.4",
     "@glimmer/syntax": "0.95.0",
     "@prettier/cli": "0.9.0",
+    "@prettier/html-event-attributes": "0.0.1",
     "@prettier/html-tags": "1.1.0",
     "@prettier/parse-srcset": "3.1.0",
     "@typescript-eslint/typescript-estree": "8.43.0",
@@ -68,7 +69,6 @@
     "graphql": "16.11.0",
     "hermes-parser": "0.32.0",
     "html-element-attributes": "3.5.0",
-    "html-event-attributes": "2.2.0",
     "html-ua-styles": "0.1.0",
     "ignore": "7.0.5",
     "import-meta-resolve": "4.2.0",
