--- a/package.json
+++ b/package.json
@@ -189,6 +189,7 @@
     "fix:prettier": "yarn lint:prettier --write",
     "build": "node ./scripts/build/build.js",
     "build:website": "node ./scripts/build-website.js",
+    "build:website:pr": "PULL_REQUEST=true node ./scripts/build-website.js",
     "gen:changelog": "node ./scripts/generate-changelog.js",
     "debug": "node bin/prettier.js --ignore-path=.prettierignore --plugin=./packages/plugin-oxc/index.js --plugin=./packages/plugin-hermes/index.js",
     "debug:watch": "node --watch bin/prettier.js --ignore-path=.prettierignore --plugin=./packages/plugin-oxc/index.js --plugin=./packages/plugin-hermes/index.js",
