--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@babel/types": "7.28.4",
     "@glimmer/syntax": "0.95.0",
     "@prettier/cli": "0.9.0",
+    "@prettier/html-event-attributes": "0.0.1",
     "@prettier/html-tags": "1.1.0",
     "@prettier/parse-srcset": "3.1.0",
     "@typescript-eslint/typescript-estree": "8.44.1",
