Add `"sideEffects": false` to package.json

--- a/package.json
+++ b/package.json
@@ -222,5 +222,6 @@
     "not op_mini all"
   ],
   "preferUnplugged": true,
-  "packageManager": "yarn@4.10.3"
+  "packageManager": "yarn@4.10.3",
+  "sideEffects": false
 }
