Add `"sideEffects": false` to package.json (#17949)

--- a/package.json
+++ b/package.json
@@ -220,5 +220,6 @@
     "not op_mini all"
   ],
   "preferUnplugged": true,
-  "packageManager": "yarn@4.9.2"
+  "packageManager": "yarn@4.10.3",
+  "sideEffects": false
 }
