--- a/package.json
+++ b/package.json
@@ -43,9 +43,9 @@
   ],
   "dependencies": {
     "@angular/compiler": "20.3.1",
-    "@babel/code-frame": "7.27.1",
-    "@babel/parser": "7.28.4",
-    "@babel/types": "7.28.4",
+    "@babel/code-frame": "8.0.0-beta.2",
+    "@babel/parser": "8.0.0-beta.2",
+    "@babel/types": "8.0.0-beta.2",
     "@glimmer/syntax": "0.95.0",
     "@prettier/cli": "0.9.0",
     "@prettier/html-event-attributes": "0.0.1",
@@ -123,7 +123,7 @@
     "yaml-unist-parser": "2.0.5"
   },
   "devDependencies": {
-    "@babel/generator": "7.28.3",
+    "@babel/generator": "8.0.0-beta.2",
     "@eslint-react/eslint-plugin": "1.53.1",
     "@eslint/js": "9.35.0",
     "@stylistic/eslint-plugin": "5.3.1",
@@ -178,9 +178,12 @@
   "scripts": {
     "prepublishOnly": "echo \"Error: must publish from dist/\" && exit 1",
     "test": "jest",
+    "test:node14": "cross-env NODE_OPTIONS=\"--experimental-loader=$PWD/scripts/nodejs-14-test-loader.js --no-warnings=ExperimentalWarning\" jest --runInBand",
     "test:dev-package": "cross-env INSTALL_PACKAGE=1 yarn test",
     "test:production": "cross-env NODE_ENV=production yarn test",
+    "test:production-node14": "cross-env NODE_ENV=production yarn test:node14",
     "test:production-standalone": "cross-env TEST_STANDALONE=1 yarn test:production",
+    "test:production-standalone-node14": "cross-env TEST_STANDALONE=1 yarn test:production-node14",
     "test:production-lint": "eslint dist/prettier --config=./scripts/bundle-eslint-config.js --quiet --format friendly",
     "perf": "yarn && yarn build && cross-env NODE_ENV=production node ./dist/prettier/bin/prettier.cjs",
     "perf:inspect": "yarn && yarn build && cross-env NODE_ENV=production node --inspect-brk ./dist/prettier/bin/prettier.cjs",
