Support toml front-matter in markdown

--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "node-style-text": "1.0.0",
     "npm-run-all2": "8.0.4",
     "prettier": "3.6.2",
+    "prettier-plugin-toml": "2.0.6",
     "pretty-bytes": "7.1.0",
     "pretty-ms": "9.3.0",
     "rollup-plugin-license": "3.6.0",
