--- a/.github/workflows/autofix.yml
+++ b/.github/workflows/autofix.yml
@@ -7,8 +7,7 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
-permissions:
-  contents: read
+permissions: {}
 
 jobs:
   fix:
