--- a/.vscode/settings.example.json
+++ b/.vscode/settings.example.json
@@ -1,5 +1,5 @@
 {
-  "[javascript][typescript][javascriptreact][typescriptreact][json][jsonc][markdown][yaml]": {
+  "[javascript][typescript][javascriptreact][typescriptreact][json][jsonc][markdown][yaml][css][html]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true,
   },
