Ignore `node` in renovate config (#18018)

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -89,6 +89,10 @@
       groupName: "docusaurus",
       matchPackageNames: ["@docusaurus/*"],
     },
+    {
+      matchPackageNames: ["node"],
+      enabled: false,
+    },
   ],
   ignoreDeps: [
     // It's a dependency of `remark-parse`, use same version to reduce size
