Ignore `node` in renovate config (`ignoreDeps`)

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -89,15 +89,13 @@
       groupName: "docusaurus",
       matchPackageNames: ["@docusaurus/*"],
     },
-    {
-      matchPackageNames: ["node"],
-      enabled: false,
-    },
   ],
   ignoreDeps: [
     // It's a dependency of `remark-parse`, use same version to reduce size
     "collapse-white-space",
     // It will be updated by release script
     "prettier",
+    // Old versions are required to test
+    "node",
   ],
 }
