--- a/.github/workflows/prod-test.yml
+++ b/.github/workflows/prod-test.yml
@@ -188,6 +188,6 @@ jobs:
       - name: Release
         # Use `--compact` after we publish `@prettier/plugin-oxc`
         # run: |
-        #   npx pkg-pr-new publish "./dist/*" --compact --packageManager=yarn
+        #   yarn dlx pkg-pr-new publish "./dist/*" --compact --packageManager=yarn
         run: |
-          npx pkg-pr-new publish "./dist/*" --packageManager=yarn
+          yarn dlx pkg-pr-new publish "./dist/*" --packageManager=yarn
