--- a/.github/workflows/dev-test.yml
+++ b/.github/workflows/dev-test.yml
@@ -40,6 +40,8 @@ jobs:
           # Versions not tested on linux, normally only even versions
           # If latest version is an odd number, it can be listed below too
           - os: "ubuntu-latest"
+            node: "25"
+          - os: "ubuntu-latest"
             node: "22"
     env:
       ENABLE_CODE_COVERAGE: ${{ matrix.ENABLE_CODE_COVERAGE }}
