--- a/.github/workflows/prod-test.yml
+++ b/.github/workflows/prod-test.yml
@@ -67,6 +67,8 @@ jobs:
           # Versions not tested on linux, normally only even versions
           # If latest version is an odd number, it can be listed below too
           - os: "ubuntu-latest"
+            node: "25"
+          - os: "ubuntu-latest"
             node: "22"
           - os: "ubuntu-latest"
             node: "20"
