--- a/.github/workflows/prod-test.yml
+++ b/.github/workflows/prod-test.yml
@@ -68,6 +68,10 @@ jobs:
           # If latest version is an odd number, it can be listed below too
           - os: "ubuntu-latest"
             node: "25"
+          - os: "windows-latest"
+            node: "25"
+          - os: "macos-latest"
+            node: "25"
           - os: "ubuntu-latest"
             node: "22"
           - os: "ubuntu-latest"
