Build: transform `String.raw` (#18134)

--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
     "@eslint/js": "9.38.0",
     "@stylistic/eslint-plugin": "5.5.0",
     "@types/estree": "1.0.8",
+    "@types/jsesc": "3.0.3",
     "@typescript-eslint/eslint-plugin": "8.46.2",
     "@typescript-eslint/parser": "8.46.2",
     "browserslist": "4.27.0",
@@ -156,6 +157,7 @@
     "jest-snapshot-serializer-ansi": "2.2.1",
     "jest-snapshot-serializer-raw": "2.0.0",
     "jest-watch-typeahead": "3.0.1",
+    "jsesc": "3.1.0",
     "knip": "5.66.2",
     "magic-string": "0.30.19",
     "nano-spawn": "2.0.0",
