--- a/website/package.json
+++ b/website/package.json
@@ -34,8 +34,8 @@
     "@types/js-yaml": "4.0.9",
     "@vitejs/plugin-react": "5.1.1",
     "concurrently": "9.2.1",
-    "js-yaml": "4.1.1",
-    "vite": "7.2.2"
+    "vite": "7.2.2",
+    "yaml": "2.8.1"
   },
   "browserslist": {
     "production": [
