--- a/package.json
+++ b/package.json
@@ -172,7 +172,8 @@
     "serialize-javascript": "7.0.0",
     "tempy": "3.1.0",
     "tinybench": "5.1.0",
-    "ts-expect": "1.3.0"
+    "ts-expect": "1.3.0",
+    "yaml-test-suite": "0.0.2"
   },
   "resolutions": {
     "trim": "1.0.1"
