--- a/website/blog/authors.yml
+++ b/website/blog/authors.yml
@@ -97,6 +97,6 @@ fabiospampinato:
 fisker:
   name: Fisker Cheung
   url: https://github.com/fisker
-  image_url: https://github.com/fisker.png
+  image_url: https://github.com/fisker.png?size=58
   socials:
     github: fisker
