Add blog post for v3.7 (#18323)
Co-authored-by: autofix-ci[bot] <114827586+autofix-ci[bot]@users.noreply.github.com>

--- a/website/blog/authors.yml
+++ b/website/blog/authors.yml
@@ -93,3 +93,10 @@ fabiospampinato:
   socials:
     x: fabiospampinato
     github: fabiospampinato
+
+fisker:
+  name: Fisker Cheung
+  url: https://github.com/fisker
+  image_url: https://github.com/fisker.png?size=58
+  socials:
+    github: fisker
