--- a/.github/workflows/prod-test.yml
+++ b/.github/workflows/prod-test.yml
@@ -124,21 +124,9 @@ jobs:
           name: dist
           path: dist
 
-      - name: Run Tests
-        if: matrix.node != '14'
-        run: yarn test:production
-
-      - name: Run Tests (Node.js 14)
-        if: matrix.node == '14'
-        run: yarn test:production-node14
-
-      - name: Run Format Tests (standalone)
-        if: matrix.node != '14'
-        run: yarn test:production-standalone
-
-      - name: Run Format Tests (standalone, Node.js 14)
-        if: matrix.node == '14'
-        run: yarn test:production-standalone-node14
+      - name: "`--debug-benchmark` flag"
+        run: |
+          node dist/prettier/bin/prettier.cjs --debug-benchmark index.js 2>&1 | grep "Latency avg" || exit 1
 
   cli:
     name: CLI
