--- a/.github/workflows/prod-test.yml
+++ b/.github/workflows/prod-test.yml
@@ -139,6 +139,15 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
         with:
+          package-manager-cache: false
+
+      - name: "`--debug-benchmark` flag"
+        run: |
+          node dist/prettier/bin/prettier.cjs --debug-benchmark index.js 2>&1 | grep "'--debug-benchmark' requires the 'tinybench' package to be installed." || exit 1
+
+      - name: Setup Node.js
+        uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
+        with:
           node-version: "0.10.48"
           package-manager-cache: false
 
