--- a/.github/workflows/prod-test.yml
+++ b/.github/workflows/prod-test.yml
@@ -142,8 +142,9 @@ jobs:
 
       - name: "`--debug-benchmark` flag"
         if: ${{ matrix.node != '14' }}
+        working-directory: dist/prettier
         run: |
-          node dist/prettier/bin/prettier.cjs --debug-benchmark index.js 2>&1 | grep "Latency avg" || exit 1
+          node bin/prettier.cjs --debug-benchmark index.js 2>&1 | grep "Latency avg" || exit 1
 
   cli:
     name: CLI
@@ -165,8 +166,9 @@ jobs:
           package-manager-cache: false
 
       - name: "`--debug-benchmark` flag"
+        working-directory: dist/prettier
         run: |
-          node dist/prettier/bin/prettier.cjs --debug-benchmark index.js 2>&1
+          node bin/prettier.cjs --debug-benchmark index.js 2>&1
 
       - name: Setup Node.js
         uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
@@ -178,8 +180,9 @@ jobs:
         run: node -v | grep "v0.10.48" || exit 1
 
       - name: Run CLI on Node.js v0.10.48
+        working-directory: dist/prettier
         run: |
-          node dist/prettier/bin/prettier.cjs --version 2>&1 >/dev/null | grep "prettier requires at least version 14 of Node, please upgrade" || exit 1
+          node bin/prettier.cjs --version 2>&1 >/dev/null | grep "prettier requires at least version 14 of Node, please upgrade" || exit 1
 
   preview:
     if: github.repository == 'prettier/prettier'
