--- a/.github/workflows/prod-test.yml
+++ b/.github/workflows/prod-test.yml
@@ -168,7 +168,7 @@ jobs:
       - name: "`--debug-benchmark` flag"
         working-directory: dist/prettier
         run: |
-          node bin/prettier.cjs --debug-benchmark index.js 2>&1
+          node bin/prettier.cjs --debug-benchmark index.js 2>&1 | grep "'--debug-benchmark' requires the 'tinybench' package to be installed." || exit 1
 
       - name: Setup Node.js
         uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903 # v6.0.0
