--- a/.github/workflows/dev-test.yml
+++ b/.github/workflows/dev-test.yml
@@ -80,4 +80,5 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
 
       - name: "`--debug-benchmark` flag"
+        if: ${{ matrix.os != 'windows-latest' }}
         run: node bin/prettier.cjs --debug-benchmark package.json 2>&1 >/dev/null | grep "Latency avg" || exit 1
