--- a/website/data/languages.yml
+++ b/website/data/languages.yml
@@ -2,22 +2,24 @@
   image: /images/languages/tools_js.svg
   variants:
     - "[JSX](https://facebook.github.io/jsx/)"
-    - "[Flow](https://flow.org)"
-    - "[TypeScript](https://www.typescriptlang.org)"
-    - "[JSON](https://json.org)"
+    - "[Flow](https://flow.org/)"
+    - "[TypeScript](https://www.typescriptlang.org/)"
+    - "[JSON](https://json.org/)"
 - name: HTML
   image: /images/languages/tools_html.svg
   variants:
-    - "[Vue](https://vuejs.org)"
-    - "[Angular](https://angular.io)"
-    - "[Ember / Handlebars](https://emberjs.com)"
+    - "[Vue](https://vuejs.org/)"
+    - "[Angular](https://angular.io/)"
+    - "[Ember / Handlebars](https://emberjs.com/)"
+    - "[Lightning Web Components (LWC)](https://developer.salesforce.com/developer-centers/lightning-web-components)"
+    - "[MJML](https://mjml.io/)"
 - name: CSS
   image: /images/languages/tools_css.svg
   variants:
-    - "[Less](http://lesscss.org)"
-    - "[SCSS](https://sass-lang.com)"
-    - "[`styled-components`](https://styled-components.com) 💅"
-    - "[`styled-jsx`](https://npmjs.com/styled-jsx)"
+    - "[Less](http://lesscss.org/)"
+    - "[SCSS](https://sass-lang.com/)"
+    - "[`styled-components`](https://styled-components.com/) 💅"
+    - "[`styled-jsx`](https://npmjs.com/styled-jsx/)"
 - name: GraphQL
   nameLink: https://graphql.org
   image: /images/languages/tools_gql.svg
@@ -26,9 +28,9 @@
 - name: Markdown
   image: /images/languages/tools_md.svg
   variants:
-    - "[CommonMark](https://commonmark.org)"
+    - "[CommonMark](https://commonmark.org/)"
     - "[GitHub-Flavored Markdown](https://github.github.com/gfm/)"
-    - "[MDX v1](https://mdxjs.com)"
+    - "[MDX v1](https://mdxjs.com/)"
 - name: YAML
   nameLink: https://yaml.org
   image: /images/languages/tools_yaml.svg
