Add test for `--debug-benchmark` flag (#18410)
Co-authored-by: renovate[bot] <29139614+renovate[bot]@users.noreply.github.com>

--- a/.github/workflows/dev-test.yml
+++ b/.github/workflows/dev-test.yml
@@ -78,3 +78,7 @@ jobs:
           disable_search: true
           files: coverage/lcov.info
           token: ${{ secrets.CODECOV_TOKEN }}
+
+      - name: "`--debug-benchmark` flag"
+        if: ${{ matrix.os != 'windows-latest' }}
+        run: node bin/prettier.cjs --debug-benchmark package.json 2>&1 >/dev/null | grep "Latency avg" || exit 1
