--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "browserslist-to-esbuild": "2.1.1",
     "buffer": "6.0.3",
     "c8": "10.1.3",
+    "commonmark.json": "0.31.0",
     "cross-env": "10.1.0",
     "cspell": "9.3.2",
     "enquirer": "2.4.1",
