--- a/package.json
+++ b/package.json
@@ -135,7 +135,7 @@
     "browserslist-to-esbuild": "2.1.1",
     "buffer": "6.0.3",
     "c8": "10.1.3",
-    "commonmark.json": "0.31.0",
+    "commonmark-test-suite": "0.0.2",
     "cross-env": "10.1.0",
     "cspell": "9.3.2",
     "enquirer": "2.4.1",
