--- a/package.json
+++ b/package.json
@@ -151,6 +151,7 @@
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-unicorn": "62.0.0",
     "esm-utils": "4.4.2",
+    "gfm-test-suite": "0.0.1",
     "globals": "16.5.0",
     "jest": "30.2.0",
     "jest-light-runner": "0.7.10",
