--- a/package.json
+++ b/package.json
@@ -89,7 +89,12 @@
     "leven": "4.1.0",
     "linguist-languages": "9.1.11",
     "meriyah": "7.0.0",
+    "micromark-extension-gfm-footnote": "2.1.0",
+    "micromark-extension-gfm-strikethrough": "2.1.0",
+    "micromark-extension-gfm-table": "2.1.1",
+    "micromark-extension-gfm-task-list-item": "2.1.0",
     "micromark-util-character": "2.1.0",
+    "micromark-util-combine-extensions": "2.0.1",
     "micromark-util-symbol": "2.0.0",
     "micromatch": "4.0.8",
     "minimist": "1.2.8",
@@ -171,6 +176,10 @@
     "magic-string": "0.30.21",
     "make-synchronized": "0.8.0",
     "mdast-util-from-markdown": "2.0.2",
+    "mdast-util-gfm-footnote": "2.1.0",
+    "mdast-util-gfm-strikethrough": "2.0.0",
+    "mdast-util-gfm-table": "2.0.0",
+    "mdast-util-gfm-task-list-item": "2.0.0",
     "micromark-util-types": "2.0.2",
     "nano-spawn": "2.0.0",
     "node-style-text": "2.1.2",
