utilize gfm-autolink-literal

--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "leven": "4.1.0",
     "linguist-languages": "9.1.11",
     "meriyah": "7.0.0",
+    "micromark-extension-gfm-autolink-literal": "2.1.0",
     "micromark-extension-gfm-footnote": "2.1.0",
     "micromark-extension-gfm-strikethrough": "2.1.0",
     "micromark-extension-gfm-table": "2.1.1",
