--- a/package.json
+++ b/package.json
@@ -89,7 +89,13 @@
     "leven": "4.1.0",
     "linguist-languages": "9.1.11",
     "meriyah": "7.0.0",
+    "micromark-extension-gfm-autolink-literal": "2.1.0",
+    "micromark-extension-gfm-footnote": "2.1.0",
+    "micromark-extension-gfm-strikethrough": "2.1.0",
+    "micromark-extension-gfm-table": "2.1.1",
+    "micromark-extension-gfm-task-list-item": "2.1.0",
     "micromark-util-character": "2.1.0",
+    "micromark-util-combine-extensions": "2.0.1",
     "micromark-util-symbol": "2.0.0",
     "micromatch": "4.0.8",
     "minimist": "1.2.8",
@@ -107,7 +113,7 @@
     "postcss-values-parser": "2.0.1",
     "regexp-util": "2.0.3",
     "remark-footnotes": "2.0.0",
-    "remark-gfm": "4.0.0",
+    "remark-gfm": "4.0.1",
     "remark-math": "6.0.0",
     "remark-math-v3": "npm:remark-math@3.0.1",
     "remark-parse": "11.0.0",
@@ -135,6 +141,7 @@
     "@eslint/js": "9.39.1",
     "@stylistic/eslint-plugin": "5.6.1",
     "@types/jsesc": "3.0.3",
+    "@types/mdast": "4.0.4",
     "@typescript-eslint/eslint-plugin": "8.48.1",
     "@typescript-eslint/parser": "8.48.1",
     "base64-arraybuffer-es6": "3.1.0",
@@ -171,6 +178,10 @@
     "magic-string": "0.30.21",
     "make-synchronized": "0.8.0",
     "mdast-util-from-markdown": "2.0.2",
+    "mdast-util-gfm-footnote": "2.1.0",
+    "mdast-util-gfm-strikethrough": "2.0.0",
+    "mdast-util-gfm-table": "2.0.0",
+    "mdast-util-gfm-task-list-item": "2.0.0",
     "micromark-util-types": "2.0.2",
     "nano-spawn": "2.0.0",
     "node-style-text": "2.1.2",
