[remark-11] Simplify markdown parse

--- a/package.json
+++ b/package.json
@@ -88,15 +88,23 @@
     "json5": "2.2.3",
     "leven": "4.1.0",
     "linguist-languages": "9.1.11",
+    "mdast-util-from-markdown": "2.0.2",
+    "mdast-util-gfm-footnote": "2.1.0",
+    "mdast-util-gfm-strikethrough": "2.0.0",
+    "mdast-util-gfm-table": "2.0.0",
+    "mdast-util-gfm-task-list-item": "2.0.0",
+    "mdast-util-math": "3.0.0",
     "meriyah": "7.0.0",
     "micromark-extension-gfm-autolink-literal": "2.1.0",
     "micromark-extension-gfm-footnote": "2.1.0",
     "micromark-extension-gfm-strikethrough": "2.1.0",
     "micromark-extension-gfm-table": "2.1.1",
     "micromark-extension-gfm-task-list-item": "2.1.0",
+    "micromark-extension-math": "3.1.0",
     "micromark-util-character": "2.1.0",
     "micromark-util-combine-extensions": "2.0.1",
     "micromark-util-symbol": "2.0.0",
+    "micromark-util-types": "2.0.2",
     "micromatch": "4.0.8",
     "minimist": "1.2.8",
     "n-readlines": "3.4.0",
@@ -114,9 +122,7 @@
     "regexp-util": "2.0.3",
     "remark-footnotes": "2.0.0",
     "remark-gfm": "4.0.1",
-    "remark-math": "6.0.0",
     "remark-math-v3": "npm:remark-math@3.0.1",
-    "remark-parse": "11.0.0",
     "remark-parse-v8": "npm:remark-parse@8.0.3",
     "remark-wiki-link": "2.0.1",
     "sdbm": "3.0.0",
@@ -127,7 +133,6 @@
     "trim-newlines": "5.0.0",
     "typescript": "5.9.3",
     "unicode-regex": "4.2.0",
-    "unified": "11.0.5",
     "unified-v9": "npm:unified@9.2.2",
     "url-or-path": "2.6.1",
     "vnopts": "2.0.3",
@@ -177,12 +182,6 @@
     "knip": "5.70.2",
     "magic-string": "0.30.21",
     "make-synchronized": "0.8.0",
-    "mdast-util-from-markdown": "2.0.2",
-    "mdast-util-gfm-footnote": "2.1.0",
-    "mdast-util-gfm-strikethrough": "2.0.0",
-    "mdast-util-gfm-table": "2.0.0",
-    "mdast-util-gfm-task-list-item": "2.0.0",
-    "micromark-util-types": "2.0.2",
     "nano-spawn": "2.0.0",
     "node-style-text": "2.1.2",
     "npm-run-all2": "8.0.4",
