Simplify `gfm-autolink-literal` hack

--- a/package.json
+++ b/package.json
@@ -89,16 +89,11 @@
     "leven": "4.1.0",
     "linguist-languages": "9.1.11",
     "mdast-util-from-markdown": "2.0.2",
+    "mdast-util-gfm": "3.1.0",
     "mdast-util-gfm-footnote": "2.1.0",
-    "mdast-util-gfm-strikethrough": "2.0.0",
-    "mdast-util-gfm-table": "2.0.0",
-    "mdast-util-gfm-task-list-item": "2.0.0",
     "mdast-util-math": "3.0.0",
     "meriyah": "7.0.0",
     "micromark-extension-gfm-autolink-literal": "2.1.0",
-    "micromark-extension-gfm-footnote": "2.1.0",
-    "micromark-extension-gfm-strikethrough": "2.1.0",
-    "micromark-extension-gfm-table": "2.1.1",
     "micromark-extension-gfm-task-list-item": "2.1.0",
     "micromark-extension-math": "3.1.0",
     "micromark-util-character": "2.1.0",
