--- a/package.json
+++ b/package.json
@@ -93,12 +93,13 @@
     "mdast-util-gfm-footnote": "2.1.0",
     "mdast-util-math": "3.0.0",
     "meriyah": "7.0.0",
+    "micromark-extension-gfm": "3.0.0",
     "micromark-extension-gfm-autolink-literal": "2.1.0",
     "micromark-extension-gfm-task-list-item": "2.1.0",
     "micromark-extension-math": "3.1.0",
-    "micromark-util-character": "2.1.0",
+    "micromark-util-character": "2.1.1",
     "micromark-util-combine-extensions": "2.0.1",
-    "micromark-util-symbol": "2.0.0",
+    "micromark-util-symbol": "2.0.1",
     "micromark-util-types": "2.0.2",
     "micromatch": "4.0.8",
     "minimist": "1.2.8",
@@ -116,7 +117,6 @@
     "postcss-values-parser": "2.0.1",
     "regexp-util": "2.0.3",
     "remark-footnotes": "2.0.0",
-    "remark-gfm": "4.0.1",
     "remark-math-v3": "npm:remark-math@3.0.1",
     "remark-parse-v8": "npm:remark-parse@8.0.3",
     "remark-wiki-link": "2.0.1",
