--- a/package.json
+++ b/package.json
@@ -90,15 +90,13 @@
     "linguist-languages": "9.1.11",
     "mdast-util-from-markdown": "2.0.2",
     "mdast-util-gfm": "3.1.0",
-    "mdast-util-gfm-footnote": "2.1.0",
     "mdast-util-math": "3.0.0",
+    "mdast-util-wiki-link": "0.1.2",
     "meriyah": "7.0.0",
     "micromark-extension-gfm": "3.0.0",
-    "micromark-extension-gfm-autolink-literal": "2.1.0",
-    "micromark-extension-gfm-task-list-item": "2.1.0",
     "micromark-extension-math": "3.1.0",
+    "micromark-extension-wiki-link": "0.0.4",
     "micromark-util-character": "2.1.1",
-    "micromark-util-combine-extensions": "2.0.1",
     "micromark-util-symbol": "2.0.1",
     "micromark-util-types": "2.0.2",
     "micromatch": "4.0.8",
@@ -119,7 +117,6 @@
     "remark-footnotes": "2.0.0",
     "remark-math-v3": "npm:remark-math@3.0.1",
     "remark-parse-v8": "npm:remark-parse@8.0.3",
-    "remark-wiki-link": "2.0.1",
     "sdbm": "3.0.0",
     "search-closest": "1.1.0",
     "smol-toml": "1.5.2",
@@ -141,7 +138,6 @@
     "@eslint/js": "9.39.1",
     "@stylistic/eslint-plugin": "5.6.1",
     "@types/jsesc": "3.0.3",
-    "@types/mdast": "4.0.4",
     "@typescript-eslint/eslint-plugin": "8.48.1",
     "@typescript-eslint/parser": "8.48.1",
     "base64-arraybuffer-es6": "3.1.0",
