Remove `-vX` suffix from dependencies

--- a/package.json
+++ b/package.json
@@ -116,8 +116,8 @@
     "postcss-values-parser": "2.0.1",
     "regexp-util": "2.0.3",
     "remark-footnotes": "2.0.0",
-    "remark-math-v3": "npm:remark-math@3.0.1",
-    "remark-parse-v8": "npm:remark-parse@8.0.3",
+    "remark-math": "3.0.1",
+    "remark-parse": "8.0.3",
     "sdbm": "3.0.0",
     "search-closest": "1.1.0",
     "smol-toml": "1.5.2",
@@ -126,7 +126,7 @@
     "trim-newlines": "5.0.0",
     "typescript": "5.9.3",
     "unicode-regex": "4.2.0",
-    "unified-v9": "npm:unified@9.2.2",
+    "unified": "9.2.2",
     "url-or-path": "2.6.1",
     "vnopts": "2.0.3",
     "wcwidth.js": "2.0.0",
