--- a/package.json
+++ b/package.json
@@ -210,9 +210,9 @@
     "build:website": "node ./scripts/build-website.js",
     "build:website:pr": "cross-env PULL_REQUEST=true yarn build:website",
     "generate-changelog": "node ./scripts/generate-changelog.js",
-    "debug": "node bin/prettier.js --ignore-path=.prettierignore --plugin=./packages/plugin-oxc/index.js --plugin=./packages/plugin-hermes/index.js",
-    "debug:watch": "node --watch bin/prettier.js --ignore-path=.prettierignore --plugin=./packages/plugin-oxc/index.js --plugin=./packages/plugin-hermes/index.js",
-    "debug:inspect": "node --inspect-brk bin/prettier.js --ignore-path=.prettierignore --plugin=./packages/plugin-oxc/index.js --plugin=./packages/plugin-hermes/index.js"
+    "debug": "node bin/prettier.js --ignore-path=.prettierignore",
+    "debug:watch": "node --watch bin/prettier.js --ignore-path=.prettierignore",
+    "debug:inspect": "node --inspect-brk bin/prettier.js --ignore-path=.prettierignore"
   },
   "c8": {
     "reporter": [
