Exclude production plugin entry from coverage report

--- a/package.json
+++ b/package.json
@@ -233,6 +233,7 @@
       "src/document/debug.js",
       "src/universal/*.browser.js",
       "src/utilities/unexpected-node-error.js",
+      "src/plugins/**",
       "src/language-js/types/estree.d.ts",
       "src/**/**/*.d.ts"
     ]
