--- a/tests/format/yaml/mapping/long-key/test.yml
+++ b/tests/format/yaml/mapping/long-key/test.yml
@@ -1,1 +1,1 @@
-foo foo foo foo foo foo foo foo foo: bar
+long long long long long long long long long long long long long long long long long long key: bar
