--- a/package.json
+++ b/package.json
@@ -150,6 +150,7 @@
     "eslint-plugin-simple-import-sort": "12.1.1",
     "eslint-plugin-unicorn": "62.0.0",
     "esm-utils": "4.4.2",
+    "get-port": "7.1.0",
     "gfm-test-suite": "0.0.2",
     "globals": "16.5.0",
     "jest": "30.2.0",
@@ -169,6 +170,7 @@
     "prettier": "3.7.4",
     "pretty-bytes": "7.1.0",
     "pretty-ms": "9.3.0",
+    "puppeteer": "24.34.0",
     "rollup-plugin-license": "3.6.0",
     "semver": "7.7.3",
     "serialize-javascript": "7.0.2",
@@ -189,6 +191,7 @@
     "test:production-node14": "cross-env NODE_ENV=production yarn test:node14",
     "test:production-standalone": "cross-env TEST_STANDALONE=1 yarn test:production",
     "test:production-standalone-node14": "cross-env TEST_STANDALONE=1 yarn test:production-node14",
+    "test:production-chrome": "cross-env NODE_ENV=production TEST_RUNTIME=chrome yarn test",
     "test:production-lint": "eslint dist --config=./scripts/production-eslint-config.js --quiet --format friendly",
     "perf": "yarn && yarn build && cross-env NODE_ENV=production node ./dist/prettier/bin/prettier.cjs",
     "perf:inspect": "yarn && yarn build && cross-env NODE_ENV=production node --inspect-brk ./dist/prettier/bin/prettier.cjs",
