--- a/package.json
+++ b/package.json
@@ -191,7 +191,9 @@
     "test:production-node14": "cross-env NODE_ENV=production yarn test:node14",
     "test:production-standalone": "cross-env TEST_STANDALONE=1 yarn test:production",
     "test:production-standalone-node14": "cross-env TEST_STANDALONE=1 yarn test:production-node14",
-    "test:production-chrome": "cross-env NODE_ENV=production TEST_RUNTIME=chrome yarn test",
+    "test:browser": "cross-env  NODE_ENV=production TEST_RUNTIME=browser yarn test",
+    "test:browser:chrome": "cross-env TEST_RUNTIME_BROWSER_PRODUCT=chrome yarn test:browser",
+    "test:browser:firefox": "cross-env TEST_RUNTIME_BROWSER_PRODUCT=firefox yarn test:browser",
     "test:production-lint": "eslint dist --config=./scripts/production-eslint-config.js --quiet --format friendly",
     "perf": "yarn && yarn build && cross-env NODE_ENV=production node ./dist/prettier/bin/prettier.cjs",
     "perf:inspect": "yarn && yarn build && cross-env NODE_ENV=production node --inspect-brk ./dist/prettier/bin/prettier.cjs",
