--- a/website/package.json
+++ b/website/package.json
@@ -15,13 +15,19 @@
     "update-stable-docs": "node ./scripts/update-stable-docs.mjs"
   },
   "dependencies": {
+    "@codemirror/commands": "6.10.1",
+    "@codemirror/lang-css": "6.3.1",
+    "@codemirror/lang-javascript": "6.2.4",
+    "@codemirror/lang-markdown": "6.5.0",
+    "@codemirror/language": "6.12.1",
+    "@codemirror/state": "6.5.3",
+    "@codemirror/view": "6.39.6",
     "@docusaurus/core": "3.9.2",
     "@docusaurus/preset-classic": "3.9.2",
     "@mdx-js/react": "3.1.1",
     "@sandhose/prettier-animated-logo": "1.0.3",
     "clsx": "2.1.1",
-    "codemirror-graphql": "2.2.4",
-    "graphql": "16.12.0",
+    "cm6-graphql": "0.2.1",
     "prism-react-renderer": "2.4.1",
     "react": "19.2.1",
     "react-dom": "19.2.1",
